announcement bar font bolded and header changed

--- a/snippets/header-dropdown-menu.liquid
+++ b/snippets/header-dropdown-menu.liquid
@@ -8,19 +8,17 @@
 <nav class="header__inline-menu">
   <ul class="list-menu list-menu--inline" role="list">
     {%- for link in section.settings.menu.links -%}
-      <li>
+      <li class="twcss-uppercase twcss-text-sm twcss-font-medium twcss-text-black">
         {%- if link.links != blank -%}
           <header-menu>
             <details id="Details-HeaderMenu-{{ forloop.index }}">
-              <summary
-                id="HeaderMenu-{{ link.handle }}"
-                class="header__menu-item list-menu__item link focus-inset"
-              >
+              <summary id="HeaderMenu-{{ link.handle }}" class="list-menu__item focus-inset twcss-transition-all twcss-p-5 twcss-hover:font-bold twcss-hover:no-underline">
                 <span
                   {%- if link.child_active %}
-                    class="header__active-menu-item"
-                  {% endif %}
-                >
+                  class="twcss-font-bold twcss-hover:no-underline"
+                  {% else %}
+                  class="twcss-hover:twcss-font-bold twcss-hover:no-underline"
+                  {% endif %}>
                   {{- link.title | escape -}}
                 </span>
                 {{- 'icon-caret.svg' | inline_asset_content -}}
@@ -29,44 +27,35 @@
                 id="HeaderMenu-MenuList-{{ forloop.index }}"
                 class="header__submenu list-menu list-menu--disclosure color-{{ section.settings.menu_color_scheme }} gradient caption-large motion-reduce global-settings-popup"
                 role="list"
-                tabindex="-1"
-              >
+                tabindex="-1">
                 {%- for childlink in link.links -%}
                   <li>
                     {%- if childlink.links == blank -%}
                       <a
                         id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}"
                         href="{{ childlink.url }}"
-                        class="header__menu-item list-menu__item link link--text focus-inset caption-large{% if childlink.current %} list-menu__item--active{% endif %}"
+                        class="twcss-p-5 twcss-no-underline twcss-text-black list-menu__item focus-inset caption-large{% if childlink.current %} twcss-font-bold{% endif %}"
                         {% if childlink.current %}
-                          aria-current="page"
-                        {% endif %}
-                      >
+                        aria-current="page"
+                        {% endif %}>
                         {{ childlink.title | escape }}
                       </a>
                     {%- else -%}
                       <details id="Details-HeaderSubMenu-{{ link.handle }}-{{ childlink.handle }}">
-                        <summary
-                          id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}"
-                          class="header__menu-item link link--text list-menu__item focus-inset caption-large"
-                        >
+                        <summary id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}" class="twcss-p-5 twcss-no-underline list-menu__item focus-inset caption-large">
                           <span>{{ childlink.title | escape }}</span>
                           {{- 'icon-caret.svg' | inline_asset_content -}}
                         </summary>
-                        <ul
-                          id="HeaderMenu-SubMenuList-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}"
-                          class="header__submenu list-menu motion-reduce"
-                        >
+                        <ul id="HeaderMenu-SubMenuList-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}" class="header__submenu list-menu motion-reduce">
                           {%- for grandchildlink in childlink.links -%}
                             <li>
                               <a
                                 id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}"
                                 href="{{ grandchildlink.url }}"
-                                class="header__menu-item list-menu__item link link--text focus-inset caption-large{% if grandchildlink.current %} list-menu__item--active{% endif %}"
+                                class="twcss-p-5 twcss-text-black twcss-no-underline list-menu__item focus-inset caption-large{% if grandchildlink.current %} twcss-font-bold{% endif %}"
                                 {% if grandchildlink.current %}
-                                  aria-current="page"
-                                {% endif %}
-                              >
+                                aria-current="page"
+                                {% endif %}>
                                 {{ grandchildlink.title | escape }}
                               </a>
                             </li>
@@ -83,16 +72,16 @@
           <a
             id="HeaderMenu-{{ link.handle }}"
             href="{{ link.url }}"
-            class="header__menu-item list-menu__item link link--text focus-inset"
+            class="header__menu-item twcss-p-5 twcss-no-underline list-menu__item focus-inset twcss-transition-all twcss-hover:font-bold twcss-hover:no-underline"
             {% if link.current %}
-              aria-current="page"
-            {% endif %}
-          >
+            aria-current="page"
+            {% endif %}>
             <span
               {%- if link.current %}
-                class="header__active-menu-item"
-              {% endif %}
-            >
+              class="twcss-font-bold"
+              {% else %}
+              class="twcss-hover:font-bold twcss-hover:no-underline"
+              {% endif %}>
               {{- link.title | escape -}}
             </span>
           </a>
