--- a/assets/base.css
+++ b/assets/base.css
@@ -96,11 +96,6 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   margin: 0 auto;
 }
 
-.utility-bar__grid.page-width {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
 @media screen and (min-width: 750px) {
   .page-width {
     padding: 0 5rem;
@@ -2277,7 +2272,6 @@ input[type='checkbox'] {
 .announcement-bar__message {
   text-align: center;
   margin: 0;
-  letter-spacing: 0.1rem;
 }
 
 .announcement-bar-slider--fade-in-next .announcement-bar__message,
@@ -2413,7 +2407,7 @@ input[type='checkbox'] {
 
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: 1fr auto 1fr;
     column-gap: 2rem;
   }
 
@@ -2820,28 +2814,28 @@ details[open] > .header__submenu {
   }
 }
 
-.header__menu {
+/* .header__menu {
   padding: 0 1rem;
-}
+} */
 
-.header__menu-item {
+/* .header__menu-item {
   padding: 1.2rem;
   text-decoration: none;
   color: rgba(var(--color-foreground), 0.75);
-}
+} */
 
-.header__menu-item:hover {
+/* .header__menu-item:hover {
   color: rgb(var(--color-foreground));
 }
 
 .header__menu-item span {
   transition: text-decoration var(--duration-short) ease;
-}
+} */
 
-.header__menu-item:hover span {
+/* .header__menu-item:hover span {
   text-decoration: underline;
   text-underline-offset: 0.3rem;
-}
+} */
 
 details[open] > .header__menu-item {
   text-decoration: underline;
@@ -2855,7 +2849,7 @@ details[open] > .header__menu-item .icon-caret {
   transform: rotate(180deg);
 }
 
-.header__active-menu-item {
+/* .header__active-menu-item {
   transition: text-decoration-thickness var(--duration-short) ease;
   color: rgb(var(--color-foreground));
   text-decoration: underline;
@@ -2864,7 +2858,7 @@ details[open] > .header__menu-item .icon-caret {
 
 .header__menu-item:hover .header__active-menu-item {
   text-decoration-thickness: 0.2rem;
-}
+} */
 
 .header__submenu {
   transition: opacity var(--duration-default) ease,
