--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -33,7 +33,7 @@
           {%- if section.blocks.first.settings.link != blank -%}
             <a href="{{ section.blocks.first.settings.link }}" class="announcement-bar__link link link--text focus-inset animate-arrow">
           {%- endif -%}
-          <p class="announcement-bar__message twcss-text-sm">
+          <p class="announcement-bar__message twcss-text-sm twcss-font-bold">
             <span>{{ section.blocks.first.settings.text | escape }}</span>
             {%- if section.blocks.first.settings.link != blank -%}
               {{- 'icon-arrow.svg' | inline_asset_content -}}
